# system-tools

./: .travis.yml  CMakeLists.txt  ChangeLog  README.md  autogen.sh  packaging.conf  system-info.lsm  system-tools.lsm  td-system-tools.lsm  website.config
src/: 01-example  CMakeLists.txt  Fingerprint-SSH-Keys  Fingerprint-SSH-Keys.1  Fingerprint-SSH-Keys.bash-completion  Reset-Machine-ID  Reset-Machine-ID.1  Reset-Machine-ID.bash-completion  System-Health  System-Info  System-Info.1  System-Info.bash-completion  System-Maintenance  System-Maintenance.1  System-Maintenance.bash-completion  choose-grub-background  choose-image  configure-grub  configure-grub.1  configure-grub.bash-completion  get-system-info.1  get-system-info.bash-completion  get-system-info.c  grub-defaults  grub-defaults-standard  make-banner-text  package-version.h.in  print-utf8-test  print-utf8.1  print-utf8.bash-completion  print-utf8.c  random-sleep.1  random-sleep.bash-completion  random-sleep.c  run-shellcheck  system-info-example-helper  t1  t2  t2.c  t2.cc  (+10 more)
src/ANSI-Color/: color-tables.c  colors-ansi.h  html-rgb.txt  print-color.c
src/Color/: CMakeLists.txt  color-tables.c  color-tables.h  make-html-table  make-x11-table  print-color.c  text-color.c
src/Configure-GRUB/: CMakeLists.txt  configure-grub  configure-grub.1  configure-grub.bash-completion  grub-defaults-nornet  grub-defaults-standard
src/Fingerprint-SSH-Keys/: CMakeLists.txt  Fingerprint-SSH-Keys  Fingerprint-SSH-Keys.1  Fingerprint-SSH-Keys.bash-completion
src/GIMP-Scripts/: CMakeLists.txt  Make-Background  Make-BumpMap  Make-BumpMap.1  Make-BumpMap.bash-completion  Make-Caption  Make-Caption.1  Make-Caption.bash-completion  Make-Cloth  Make-Clothify  Make-Clothify.1  Make-Clothify.bash-completion  Make-GlossyText  Make-GlossyText.1  Make-GlossyText.bash-completion  Make-Mosaic  Make-Mosaic.1  Make-Mosaic.bash-completion  Make-OilPainting  Make-Oilify  Make-Oilify.1  Make-Oilify.bash-completion  Make-OldPhoto  Make-OldPhoto.1  Make-OldPhoto.bash-completion  Make-Painting  Make-Text  Resize-with-Cropping  Resize-with-Cropping.1  Resize-with-Cropping.bash-completion  Test-GIMP  Test-GIMP.1  Test-GIMP.bash-completion  Test-Gimp  Test-Gimp.1  Test-Gimp.bash-completion  gs-bumpmap  gs-bumpmap.1  gs-bumpmap.bash-completion  gs-caption  (+34 more)
src/LC_MESSAGES/: System-Info.pot
src/Print-UTF8/: CMakeLists.txt  make-banner-text  print-utf8-test  print-utf8.1  print-utf8.bash-completion  print-utf8.c  run-tests
src/Random-Sleep/: CMakeLists.txt  random-sleep.1  random-sleep.bash-completion  random-sleep.c
src/Reset-Machine-ID/: CMakeLists.txt  Reset-Machine-ID  Reset-Machine-ID.1  Reset-Machine-ID.bash-completion
src/System-Info/: CMakeLists.txt  System-Info  System-Info.1  System-Info.bash-completion  get-system-info.1  get-system-info.bash-completion  get-system-info.c  system-info-example-helper
src/System-Maintenance/: CMakeLists.txt  System-Maintenance  System-Maintenance.1  System-Maintenance.bash-completion
src/Text-Block/: CMakeLists.txt  run-tests  text-block-test  text-block.1  text-block.bash-completion  text-block.c
src/Try-Hard/: CMakeLists.txt  delay-increase-test  run-tests  try-hard  try-hard.1  try-hard.bash-completion
src/Unix-Timestamp/: CMakeLists.txt  run-tests  time2unixts.1  time2unixts.bash-completion  time2unixts.c  unixts2time.1  unixts2time.bash-completion  unixts2time.c
src/X509/: CMakeLists.txt  CertificateHelper.py  check-certificate  check-certificate.1  check-certificate.bash-completion  copy-tools  der2pem  der2pem.1  der2pem.bash-completion  extract-pem  extract-pem.1  extract-pem.bash-completion  generate-test-certificates  make-test-certificates  pem2der  pem2der.1  pem2der.bash-completion  run-tests  test-tls-connection  test-tls-connection.1  test-tls-connection.bash-completion  view-certificate  view-certificate.1  view-certificate.bash-completion  view-crl  view-crl.1  view-crl.bash-completion
src/locale/: CMakeLists.txt
src/misc/: CMakeLists.txt  clock  cls  cls.1  compresspdf  man2html  manpage2html  md2html  md2html.bash-completion  print-boxed  print-guru-meditation  show-figlet-fonts
src/profile.d/: system-info.csh  system-info.sh
src/storage/: choose-grub-background  guru-example  print-double-height  printf-test  ssh-test  translate  xterm-color-test
src/system-info.d/: 01-example  09-hostname-example  10-company-logo-example  10-nornet  18-neat  30-rsplib  banner-helper
src/system-maintenance.d/: XX-example
src/text-block-examples/: example1.txt
src/text-block-tests/: advanced1-enumerate-include-tags-full-tag-lines.good  advanced1-extract-exclude-tags-tags-only.good  advanced1-highlight-exclude-tags-full-tag-lines.good  advanced1-highlight-exclude-tags-tags-only.good  advanced1-highlight-include-tags-full-tag-lines.good  advanced1-highlight-include-tags-tags-only.good  advanced1-insert-back-exclude-tags-full-tag-lines.good  advanced1-insert-back-exclude-tags-tags-only.good  advanced1-insert-back-include-tags-tags-only.good  advanced1-insert-front-exclude-tags-full-tag-lines.good  advanced1-insert-front-exclude-tags-tags-only.good  advanced1-insert-front-include-tags-full-tag-lines.good  advanced1-remove-exclude-tags-full-tag-lines.good  advanced1-remove-exclude-tags-full-tag-lines.good.good  advanced1-remove-exclude-tags-tags-only.good  advanced1-remove-include-tags-full-tag-lines.good  advanced1-remove-include-tags-tags-only.good  advanced1-replace-exclude-tags-full-tag-lines.good  advanced1-replace-exclude-tags-tags-only.good  advanced1-replace-include-tags-full-tag-lines.good  advanced1-replace-include-tags-tags-only.good  advanced2-cat-exclude-tags-full-tag-lines.good  advanced2-enumerate-exclude-tags-tags-only.good  advanced2-highlight-exclude-tags-full-tag-lines.good  advanced2-highlight-exclude-tags-tags-only.good  advanced2-highlight-include-tags-tags-only.good  advanced2-insert-front-include-tags-full-tag-lines.good  advanced2-remove-exclude-tags-full-tag-lines.good  advanced2-replace-exclude-tags-full-tag-lines.good  example1-extract-exclude-tags-tags-only.good  (+71 more)
(+232 files in other folders)
